# pueue-tui

./: Cargo.toml  Dockerfile  README.md  aqua.yaml  justfile  main
src/: action.rs  app.rs  cli.rs  client.rs  components.rs  main.rs  tui.rs  widgets.rs
src/components/: home.rs
src/widgets/: status_bar.rs  task_table.rs
