[package]
name = "pueue-tui"
version = "0.1.0"
edition = "2024"
description = ""
authors = ["k-kuroguro <68765710+k-kuroguro@users.noreply.github.com>"]

[dependencies]
clap = { version = "4.5.20", features = [
   "derive",
   "cargo",
   "wrap_help",
   "unicode",
   "string",
   "unstable-styles",
] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
futures = "0.3.31"
pueue-lib = "0.30.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.24.0"
testcontainers = "0.26.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
